// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AssetDelete /> should render properly when an asset is selected 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
  padding: 16px;
  width: 100%;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-3 {
  padding: 0;
  -webkit-appearance: none;
  border-radius: 16px;
  width: 16px;
  height: 16px;
  border: 1px solid #ffffff;
}

.emotion-4 {
  position: absolute;
  width: 8px;
  height: 8px;
  opacity: 100;
  border-radius: 16px;
  background-color: #3A5DFF;
}

.emotion-5 {
  padding-left: 8px;
  font-weight: 700;
  color: #ffffff;
}

.emotion-6 {
  padding-left: 24px;
}

.emotion-7 {
  height: 16px;
}

.emotion-8 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 8px 16px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-8,
.emotion-8:hover,
.emotion-8:visited,
.emotion-8 .noop {
  background-color: #3A5DFF;
}

.emotion-8:hover,
.emotion-8 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #6088FE;
}

.emotion-8[aria-disabled=true],
.emotion-8 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

<form
  action=""
  className="emotion-0"
  method="post"
  onSubmit={[Function]}
>
  <div>
    <label
      className="emotion-1"
    >
      <div
        className="emotion-2"
      >
        <input
          className="emotion-3"
          defaultChecked={true}
          id="deleteSelected"
          onClick={[Function]}
          type="radio"
          value="deleteSelected"
        />
        <div
          className="emotion-4"
        />
      </div>
      <div
        className="emotion-5"
      >
        Delete Selected: 1
      </div>
    </label>
    <div
      className="emotion-6"
    >
      Delete the selected asset
    </div>
  </div>
  <div
    className="emotion-7"
  />
  <button
    className="emotion-8"
    onClick={[Function]}
    type="button"
  >
    Delete Asset
  </button>
</form>
`;

exports[`<AssetDelete /> should render properly when an asset is selected 2`] = `
.emotion-0 {
  padding: 16px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 8px;
  padding-bottom: 16px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #ffb6b2;
  border-radius: 2px;
  padding: 12px;
  padding-left: 16px;
  padding-right: 16px;
}

.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 12px;
  color: #191919;
  font-weight: 500;
  white-space: pre-line;
}

.emotion-3 a {
  color: #191919;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  margin-left: 4px;
}

.emotion-3 a:hover {
  color: #3A5DFF;
}

.emotion-4 {
  font-weight: 700;
  padding-bottom: 8px;
}

.emotion-5 {
  color: #c92300;
  padding-bottom: 16px;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-7,
.emotion-7:hover,
.emotion-7:visited,
.emotion-7 .noop {
  background-color: #808080;
}

.emotion-7:hover,
.emotion-7 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #b3b3b3;
}

.emotion-7[aria-disabled=true],
.emotion-7 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

.emotion-8 {
  width: 8px;
  min-width: 8px;
}

.emotion-9 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-9,
.emotion-9:hover,
.emotion-9:visited,
.emotion-9 .noop {
  background-color: #c92300;
}

.emotion-9:hover,
.emotion-9 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  opacity: 0.5;
}

.emotion-9[aria-disabled=true],
.emotion-9 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <svg
        color="#c92300"
        data-file-name="warning.svg"
        height={20}
      />
      <div
        className="emotion-3"
        role="alert"
      >
        Something went wrong. Please try again.
      </div>
    </div>
  </div>
  <div
    className="emotion-4"
  >
    Are you sure you want to delete "TIFF_1MB.tiff"?
  </div>
  <div
    className="emotion-5"
  >
    Deleting this asset is permanent and cannot be undone.
  </div>
  <div
    className="emotion-6"
  >
    <button
      className="emotion-7"
      onClick={[Function]}
      type="button"
    >
      Cancel
    </button>
    <div
      className="emotion-8"
    />
    <button
      aria-label="Confirm Delete Asset"
      className="emotion-9"
      onClick={[Function]}
      type="button"
    >
      Delete Asset
    </button>
  </div>
</div>
`;

exports[`<AssetDelete /> should render properly when asset is deleted 1`] = `
.emotion-0 {
  padding: 16px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #e3f7e8;
  border-radius: 2px;
  padding: 12px;
  padding-left: 16px;
  padding-right: 16px;
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 12px;
  color: #191919;
  font-weight: 500;
  white-space: pre-line;
}

.emotion-2 a {
  color: #191919;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  margin-left: 4px;
}

.emotion-2 a:hover {
  color: #3A5DFF;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <svg
      color="#009f22"
      data-file-name="checkmark.svg"
      height={20}
    />
    <div
      className="emotion-2"
      role="alert"
    >
      1 asset deleted.
    </div>
  </div>
</div>
`;

exports[`<AssetDelete /> should render properly when no asset is selected 1`] = `
.emotion-0 {
  padding: 16px;
  font-style: italic;
}

<div
  className="emotion-0"
>
  Select an asset to delete.
</div>
`;
